--- a/src/styles/scss/mixins/_button.scss
+++ b/src/styles/scss/mixins/_button.scss
@@ -15,21 +15,31 @@ $button: (
     'spread-shadow-alpha': 0,
     'border': 1px solid transparent,
 );
-
 $button-disabled: map-merge($button, (
     'color': $_color-gray--normal,
 ));
-
 $button-focus: map-merge($button, (
     'throw-shadow-color': $_color-gray--darkest,
     'throw-shadow-alpha': .07,
     'spread-shadow-color': $_color-gray--darkest,
     'spread-shadow-alpha': .07,
 ));
-
 $button-hover: map-merge($button, (
     'background': $_color-gray--lightest,
     'border': 1px solid $_color-gray--lightest,
+));
+
+$ghost: (
+    'background': transparent,
+    'border': 1px solid $_color-gray--light,
+    'color': $_color-blackish--normal,
+);
+$ghost-disabled: map-merge($ghost, (
+    'color': $_color-gray--darker,
+));
+$ghost-focus: map-merge($ghost, ());
+$ghost-hover: map-merge($ghost, (
+    'color': $_color-gray--darkest,
 ));
 
 //
@@ -39,11 +49,9 @@ $primary: map-merge($button, (
     'color': $_color-white,
     'border': 1px solid $_color-primary--normal,
 ));
-
 $primary-disabled: map-merge($primary, (
     'color': $_color-gray--normal,
 ));
-
 $primary-focus: map-merge($primary, (
     'background': $_color-primary--dark,
     'throw-shadow-color': $_color-primary--darkest,
@@ -51,10 +59,22 @@ $primary-focus: map-merge($primary, (
     'spread-shadow-color': $_color-primary--darkest,
     'spread-shadow-alpha': .1,
 ));
-
 $primary-hover: map-merge($primary, (
     'background': $_color-primary--light,
     'border': 1px solid $_color-primary--light,
+));
+
+$primary-ghost: (
+    'background': transparent,
+    'border': 1px solid $_color-primary--light,
+    'color': $_color-primary--normal,
+);
+$primary-ghost-disabled: map-merge($primary-ghost, (
+    'color': $_color-gray--darker,
+));
+$primary-ghost-focus: map-merge($primary-ghost, ());
+$primary-ghost-hover: map-merge($primary-ghost, (
+    'color': $_color-primary--dark,
 ));
 
 //
@@ -64,11 +84,9 @@ $danger: map-merge($button, (
     'color': $_color-white,
     'border': 1px solid $_color-danger--normal,
 ));
-
 $danger-disabled: map-merge($danger, (
     'color': $_color-gray--normal,
 ));
-
 $danger-focus: map-merge($danger, (
     'background': $_color-danger--dark,
     'throw-shadow-color': $_color-danger--darkest,
@@ -76,20 +94,31 @@ $danger-focus: map-merge($danger, (
     'spread-shadow-color': $_color-danger--darkest,
     'spread-shadow-alpha': .07,
 ));
-
 $danger-hover: map-merge($danger, (
     'background': $_color-danger--light,
     'border': 1px solid $_color-danger--light,
 ));
 
-$_button--background: var(--q-button--background, map-get($button, 'background'));
-$_button--border-radius: var(--q-button--border-radius, map-get($button, 'border-radius'));
-$_button--color: var(--q-button--color, map-get($button, 'color'));
-$_button--throw-shadow-color: var(--q-button--throw-shadow-color, map-get($button, 'throw-shadow-color'));
-$_button--throw-shadow-alpha: var(--q-button--throw-shadow-alpha, map-get($button, 'throw-shadow-alpha'));
-$_button--spread-shadow-color: var(--q-button--spread-shadow-color, map-get($button, 'spread-shadow-color'));
-$_button--spread-shadow-alpha: var(--q-button--spread-shadow-alpha, map-get($button, 'spread-shadow-alpha'));
+$danger-ghost: (
+    'background': transparent,
+    'border': 1px solid $_color-danger--light,
+    'color': $_color-danger--normal,
+);
+$danger-ghost-disabled: map-merge($danger-ghost, (
+    'color': $_color-gray--darker,
+));
+$danger-ghost-focus: map-merge($danger-ghost, ());
+$danger-ghost-hover: map-merge($danger-ghost, (
+    'color': $_color-danger--dark,
+));
 
+// $_button--background: var(--q-button--background, map-get($button, 'background'));
+// $_button--border-radius: var(--q-button--border-radius, map-get($button, 'border-radius'));
+// $_button--color: var(--q-button--color, map-get($button, 'color'));
+// $_button--throw-shadow-color: var(--q-button--throw-shadow-color, map-get($button, 'throw-shadow-color'));
+// $_button--throw-shadow-alpha: var(--q-button--throw-shadow-alpha, map-get($button, 'throw-shadow-alpha'));
+// $_button--spread-shadow-color: var(--q-button--spread-shadow-color, map-get($button, 'spread-shadow-color'));
+// $_button--spread-shadow-alpha: var(--q-button--spread-shadow-alpha, map-get($button, 'spread-shadow-alpha'));
 
 @mixin button-configuration($config) {
     background: map-get($config, 'background');
@@ -143,27 +172,35 @@ $_button--spread-shadow-alpha: var(--q-button--spread-shadow-alpha, map-get($but
         white-space: nowrap;
     }
 
-    // &.button--ghost {
-    //     background-color: map-get($ghost--def, 'background');
-    //     border: 1px solid map-get($ghost--def, 'border');
-    //     color: map-get($ghost--def, 'color');
+    @content;
+}
 
-    //     &:disabled,
-    //     &.disabled {
-    //         background-color: map-get($ghost--def, 'disabled__background');
-    //         color: map-get($ghost--def, 'disabled__color');
-    //     }
+@mixin ghost-configuration($config) {
+    background-color: map-get($config, 'background');
+    border: map-get($config, 'border');
+    color: map-get($config, 'color');
+}
 
-    //     &:focus,
-    //     &.focused {
-    //         box-shadow: 0 0 0 map-get($button, 'shadow-size') map-get($ghost--def, 'focus__shadow-color');
-    //         outline: none;
-    //     }
+@mixin ghost-button($config, $disabled, $focus, $hover) {
+    &.button--ghost {
+        @include ghost-configuration($config);
 
-    //     &:hover:not(:disabled),
-    //     &.hovered:not(:disabled) {
-    //         background-color: map-get($ghost--def, 'hover__background');
-    //         border: 1px solid map-get($ghost--def, 'hover__border-color');
-    //     }
-    // }
+        &:disabled,
+        &.disabled {
+            @include ghost-configuration($disabled);
+        }
+
+        &:focus,
+        &.focused {
+            // box-shadow: 0 0 0 map-get($button, 'shadow-size') map-get($ghost--def, 'focus__shadow-color');
+            outline: none;
+
+            @include ghost-configuration($focus);
+        }
+
+        &:hover:not(:disabled),
+        &.hovered:not(:disabled) {
+            @include ghost-configuration($hover);
+        }
+    }
 }
