feat: Stencil One

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -27,6 +27,8 @@
 <body>
   <q-grid gutter="12">
       <q-grid-column size="8" push="2">
+          <q-title>Input</q-title>
+          <q-input></q-input>
           <q-title>Button</q-title>
           <q-button>Default button</q-button>
           <q-button role="primary" html-type>Primary action</q-button>
