--- a/src/next/src/components/title/title.scss
+++ b/src/next/src/components/title/title.scss
@@ -1,47 +1,47 @@
 @import '../shared/variables';
 
 $_vertical-rhythm: 24px;
-$_font-size-base: map-val('--q-font-size', $typography);
+$_font-size-base: map-val($typography, '--q-font-size');
 $_font-scale-ratio: 1.2;
 
 $_title-1: (
-  'size': calc(#{$_font-size-base} * #{$_font-scale-ratio} * #{$_font-scale-ratio} * #{$_font-scale-ratio} * #{$_font-scale-ratio}),
+  'size': "calc(#{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base})",
   'weight': 600,
   'line-height': normal,
-  'margin': calc(2 * #{$_vertical-rhythm}) 0 0 0
+  'margin': (2 * $_vertical-rhythm) 0 0 0,
 );
 
 $_title-2: (
-  'size': calc(#{$_font-size-base} * #{$_font-scale-ratio} * #{$_font-scale-ratio} * #{$_font-scale-ratio}),
+  'size': "calc(#{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base})",
   'weight': 500,
   'line-height': normal,
-  'margin': calc(1.5 * #{$_vertical-rhythm}) 0 0 0
+  'margin': (1.5 * $_vertical-rhythm) 0 0 0
 );
 
 $_title-3: (
-  'size': calc(#{$_font-size-base} * #{$_font-scale-ratio} * #{$_font-scale-ratio}),
+  'size': "calc(#{$_font-size-base} * #{$_font-size-base} * #{$_font-size-base})",
   'weight': 500,
   'line-height': normal,
-  'margin': #{$_vertical-rhythm} 0 0 0
+  'margin': $_vertical-rhythm 0 0 0
 );
 
 $_title-4: (
-  'size': calc(#{$_font-size-base} * #{$_font-scale-ratio}),
+  'size': "calc(#{$_font-size-base} * #{$_font-size-base})",
   'weight': 500,
   'line-height': normal,
-  'margin': #{$_vertical-rhythm} 0 0 0
+  'margin': $_vertical-rhythm 0 0 0
 );
 
 @mixin font($def) {
-  line-height: map-get('line-height', $def);
-  font-size: map-get('size', $def);
-  font-weight: map-get('weight', $def);
-  margin: map-get('margin', $def);
+  line-height: map-get($def, 'line-height');
+  font-size: map-get($def, 'size');
+  font-weight: map-get($def, 'weight');
+  margin: map-get($def, 'margin');
 }
 
 %header {
-  color: map-val('--q-color-backish--normal', $colors);
-  font-family: map-val('--q-font-family', $typography);
+  color: map-val($colors, '--q-color-backish--normal');
+  font-family: #{map-val($typography, '--q-font-family')};
 }
 
 h1 {
