feat: rewritten title, paragraph and caption

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -6,13 +6,13 @@
   <title>Stencil Component Starter</title>
   <script src="/build/q-components.js"></script>
   <style type="text/css">
-    html {
+    /* html {
       font-size: var(--q-vertical-rhythm, 24px);
     }
 
     body {
       font-size: 14px;
-    }
+    } */
 
     .box {
       align-items: center;
@@ -25,40 +25,11 @@
   </style>
 </head>
 <body>
-  <q-grid gutter="12">
-      <q-grid-column size="8" push="2">
-          <q-title>Input</q-title>
-          <q-input></q-input>
-          <q-title>Button</q-title>
-          <q-button>Default button</q-button>
-          <q-button role="primary" html-type>Primary action</q-button>
-          <q-button role="danger">Destructive action</q-button>
-          <q-title level="2">Ghost button</q-title>
-          <q-button ghost>Default button</q-button>
-          <q-button ghost role="primary" html-type>Primary action</q-button>
-          <q-button ghost role="danger">Destructive action</q-button>
-          <q-title>Typography</q-title>
-          <q-paragraph>
-              Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient dictumst a mi nam at parturient viverra fermentum ullamcorper a ac. Parturient non suspendisse a aliquam vestibulum consectetur a parturient curabitur consectetur tincidunt hendrerit a molestie a ornare habitasse cubilia. A a justo id dictumst massa vestibulum viverra volutpat enim mauris suspendisse donec nisi suspendisse blandit vestibulum dapibus ridiculus elit.
-          </q-paragraph>
-          <q-paragraph>
-              Leo a facilisis sem parturient at scelerisque nam ultricies purus enim arcu a vivamus condimentum ligula netus torquent at class erat consequat justo. At a semper a hendrerit nullam a curae viverra eu.
-          </q-paragraph>
-          <q-title level="2">Subtitle</q-title>
-          <q-paragraph>
-              Consectetur varius facilisi condimentum lacinia a enim consectetur porttitor viverra malesuada volutpat cursus sociosqu vestibulum justo himenaeos ullamcorper senectus a. Tincidunt tristique adipiscing nisl a curae platea condimentum ante hac faucibus dictumst lorem consectetur accumsan parturient commodo habitant iaculis libero curae vestibulum per et condimentum quisque vestibulum dolor ac. Ullamcorper a purus vitae.
-          </q-paragraph>
-          <q-note>Hello out there.</q-note>
-      </q-grid-column>
-  </q-grid>
-
-  <q-title>Grid system</q-title>
-  <q-grid gutter="12">
-    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
-    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
-    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
-    <q-grid-column size-md="6" size-lg="12"><div class="box">Column</div></q-grid-column>
-  </q-grid>
-
+  <q-title>Header 1</q-title>
+  <q-paragraph>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin massa sapien, iaculis quis neque vitae, iaculis consequat dolor. Vivamus mollis diam quis odio ornare vehicula. Suspendisse potenti. Sed pellentesque ultrices sem, eu finibus dolor molestie id. Aenean nec consequat enim, sed efficitur nibh. Curabitur at fermentum velit. Aliquam rutrum facilisis dictum. Vivamus id arcu in magna feugiat hendrerit vel in felis. Morbi egestas vel arcu sed ultrices. Ut at magna pretium, scelerisque nunc ut, placerat leo.</q-paragraph>
+  <q-title level="2">Header 2</q-title>
+  <q-paragraph>Integer volutpat, lectus at sodales pellentesque, quam ante vestibulum massa, mollis iaculis dui est in arcu. Nulla auctor justo id ipsum volutpat, eu consequat dolor egestas. Nunc viverra mauris metus, vitae finibus odio sollicitudin vitae. Maecenas euismod bibendum orci id feugiat. Phasellus ultrices pharetra quam, et tincidunt mi euismod sed. Sed fringilla id augue ut rutrum. Pellentesque aliquet sed ipsum dictum finibus. Nullam ut neque at orci malesuada placerat. Proin blandit pretium neque, a fermentum nibh ultricies sed. Phasellus vitae purus elementum, faucibus nisi ut, sagittis lacus. Nullam ullamcorper faucibus purus, quis aliquet purus tempus sed. Nunc mollis eu elit eget elementum. Donec in odio dolor. Donec maximus vulputate urna ac lacinia. Aliquam erat volutpat.</q-paragraph>
+  <q-title level="3">Header 3</q-title>
+  <q-title level="4">Header 4</q-title>
 </body>
 </html>
