refactor: most of components are independent to CSS framework

--- a/src/components/src/components/caption/caption.scss
+++ b/src/components/src/components/caption/caption.scss
@@ -1,9 +1,8 @@
 @import '../shared/variables';
 
-p {
-  font-size: map-val($typography, '--q-font-size');
+small {
+  font-size: calc(#{map-val($typography, '--q-font-size')} / #{map-val($typography, '--q-font-scale')});
   font-family: map-val($typography, '--q-font-family');
-  font-weight: normal;
-  margin: map-val($spacing, '--q-vertical-spacing--small') 0 map-val($spacing, '--q-vertical-spacing--small');
-  line-height: 1.5;
+  color: #{map-val($colors, '--q-color-gray--darker')};
+  line-height: 1;
 }
