--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -25,11 +25,12 @@
   </style>
 </head>
 <body>
-  <q-title>Header 1</q-title>
-  <q-paragraph>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin massa sapien, iaculis quis neque vitae, iaculis consequat dolor. Vivamus mollis diam quis odio ornare vehicula. Suspendisse potenti. Sed pellentesque ultrices sem, eu finibus dolor molestie id. Aenean nec consequat enim, sed efficitur nibh. Curabitur at fermentum velit. Aliquam rutrum facilisis dictum. Vivamus id arcu in magna feugiat hendrerit vel in felis. Morbi egestas vel arcu sed ultrices. Ut at magna pretium, scelerisque nunc ut, placerat leo.</q-paragraph>
-  <q-title level="2">Header 2</q-title>
-  <q-paragraph>Integer volutpat, lectus at sodales pellentesque, quam ante vestibulum massa, mollis iaculis dui est in arcu. Nulla auctor justo id ipsum volutpat, eu consequat dolor egestas. Nunc viverra mauris metus, vitae finibus odio sollicitudin vitae. Maecenas euismod bibendum orci id feugiat. Phasellus ultrices pharetra quam, et tincidunt mi euismod sed. Sed fringilla id augue ut rutrum. Pellentesque aliquet sed ipsum dictum finibus. Nullam ut neque at orci malesuada placerat. Proin blandit pretium neque, a fermentum nibh ultricies sed. Phasellus vitae purus elementum, faucibus nisi ut, sagittis lacus. Nullam ullamcorper faucibus purus, quis aliquet purus tempus sed. Nunc mollis eu elit eget elementum. Donec in odio dolor. Donec maximus vulputate urna ac lacinia. Aliquam erat volutpat.</q-paragraph>
-  <q-title level="3">Header 3</q-title>
-  <q-title level="4">Header 4</q-title>
+  <q-button role="primary">Primary action</q-button>
+  <q-button role="danger">Danger action with too long description which should be ended with elipsys</q-button>
+  <q-button>Just a button</q-button>
+  <br><br>
+  <q-button role="primary" ghost>Primary action</q-button>
+  <q-button role="danger" ghost>Danger action with too long description which should be ended with elipsys</q-button>
+  <q-button ghost>Just a button</q-button>
 </body>
 </html>
