--- a/src/components/src/components/grid/grid.scss
+++ b/src/components/src/components/grid/grid.scss
@@ -1,13 +1,21 @@
-@import "@q/styles/scss/mixins/variables";
-@import "@q/styles/scss/mixins/grid";
+$_gutters: (4, 8, 12, 16, 20);
 
 :host {
-    @include grid();
+  box-sizing: border-box;
+  display: flex;
+  height: auto;
+  flex-wrap: wrap;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  max-width: 1200px;
+  zoom: 1;
+  width: 100%;
 }
 
 @each $gutter in $_gutters {
-    :host(.gutter-#{$gutter}) ::slotted(q-grid-column) {
-        padding-left: $gutter * 1px;
-        padding-right: $gutter * 1px;
-    }
+  :host(.gutter-#{$gutter}) ::slotted(q-grid-column) {
+      padding-left: $gutter * 1px;
+      padding-right: $gutter * 1px;
+  }
 }
