--- a/src/components/src/components/shared/_variables.scss
+++ b/src/components/src/components/shared/_variables.scss
@@ -1,3 +1,5 @@
+$grid-columns: 12;
+
 $typography: (
   '--q-font-family': "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Arial, sans-serif",
   '--q-font-size': calc(0.875 * 1em),
@@ -11,6 +13,7 @@ $spacing: (
 );
 
 $colors: (
+  '--q-color-white': #fff,
   '--q-color-gray--lightest': hsl(0, 0, 97),
   '--q-color-gray--lighter': hsl(0, 0, 94),
   '--q-color-gray--light': hsl(0, 0, 89),
