refactor: moved all components from CSS fw to Components

--- a/src/components/src/components/button/button.scss
+++ b/src/components/src/components/button/button.scss
@@ -25,7 +25,7 @@ button {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    padding: 1em 0;
+    padding: calc(1em - 1px) 0;
   }
 
   &:hover:not(:disabled),
