--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -25,12 +25,9 @@
   </style>
 </head>
 <body>
-  <q-button role="primary">Primary action</q-button>
-  <q-button role="danger">Danger action with too long description which should be ended with elipsys</q-button>
-  <q-button>Just a button</q-button>
-  <br><br>
-  <q-button role="primary" ghost>Primary action</q-button>
-  <q-button role="danger" ghost>Danger action with too long description which should be ended with elipsys</q-button>
-  <q-button ghost>Just a button</q-button>
+  <q-input></q-input>
+  <q-radio></q-radio>
+  <q-checkbox></q-checkbox>
+  <q-button role="primary">Create user</q-button>
 </body>
 </html>
