feat(): added toggle

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -47,6 +47,8 @@
   </style>
 </head>
 <body>
+  <q-toggle switched></q-toggle>
+  <br><br>
   <div class="form-item">
     <q-label>Your name</q-label>
     <q-input></q-input>
