feat(checkbox): functions implementation

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -73,7 +73,7 @@
   </label>
   <label class="form-entity">
     <div class="form-entity__control">
-        <q-checkbox></q-checkbox>
+        <q-checkbox intermediate checked></q-checkbox>
     </div>
     <div class="form-entity__label">
       <q-label>Checkbox item</q-label>
