--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -64,7 +64,7 @@
   </div>
   <label class="form-entity">
     <div class="form-entity__control">
-      <q-radio></q-radio>
+      <q-radio disabled checked></q-radio>
     </div>
     <div class="form-entity__label">
       <q-label>Radio item</q-label>
