--- a/src/components/src/components/shared/_variables.scss
+++ b/src/components/src/components/shared/_variables.scss
@@ -1,4 +1,5 @@
 $grid-columns: 12;
+$transition-time: 200ms;
 
 $typography: (
   '--q-font-family': "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, 'Helvetica Neue', Arial, sans-serif",
