feat(): Added `PopUp`, `Menu` and `Portal`.

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -87,29 +87,15 @@
   </label>
   <q-button role="primary">Create user</q-button>
 
-  <div style="position: relative;">
+  <div style="position: relative; display: inline-block;">
     <q-button>Select an option</q-button>
     <q-pop-up>
-      <label class="form-entity">
-        <div class="form-entity__control">
-          <q-checkbox></q-checkbox>
-        </div>
-        <div class="form-entity__label">
-          <q-label>Checkbox item</q-label>
-        </div>
-      </label>
-      <label class="form-entity">
-        <div class="form-entity__control">
-          <q-checkbox></q-checkbox>
-        </div>
-        <div class="form-entity__label">
-          <q-label>Checkbox item</q-label>
-        </div>
-      </label>
+      <q-menu>
+        <q-menu-item>Hello</q-menu-item>
+        <q-menu-item>Menu item</q-menu-item>
+      </q-menu>
     </q-pop-up>
   </div>
-
-  <q-portal></q-portal>
 
   </html>
 </body>
