--- a/src/components/src/components/popup/popup.scss
+++ b/src/components/src/components/popup/popup.scss
@@ -1,13 +1,75 @@
 @import "../shared/variables";
 
+:host {
+  display: block;
+}
+
 .popup {
   background: #{map-val($colors, '--q-color-white')};
   box-shadow: 0 16px 24px -16px #{map-val($colors, '--q-color-gray--normal')}, 0 0 24px 0 #{map-val($colors, '--q-color-gray--lighter')};
   border-radius: 2px;
-  display: block;
-  padding: 8px 4px;
   position: absolute;
-  // height: 480px;
-  min-width: 140px;
   top: 100%;
+  width: 100%;
+  display: none;
+
+  &.shown {
+    display: block;
+  }
+
+  &.triangle-up,
+  &.triangle-down,
+  &.triangle-left,
+  &.triangle-right {
+    &:after {
+      content: '';
+      width: 0;
+      height: 0;
+      position: absolute;
+    }
+  }
+
+  &.triangle-up {
+    &:after {
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 8px solid #{map-val($colors, '--q-color-white')};
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  &.triangle-down {
+    &:after {
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-top: 8px solid #{map-val($colors, '--q-color-white')};
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  &.triangle-left {
+    &:after {
+      border-top: 8px solid transparent;
+      border-bottom: 8px solid transparent;
+      border-right: 8px solid #{map-val($colors, '--q-color-white')};
+      right: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &.triangle-right {
+    &:after {
+      border-top: 8px solid transparent;
+      border-bottom: 8px solid transparent;
+      border-left: 8px solid #{map-val($colors, '--q-color-white')};
+      left: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
 }
